backend/user-data-service/k8s/user-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data
  template:
    metadata:
      labels:
        app: user-data
    spec:
      containers:
        - name: formula
          image: dragomir1401/user-data:latest
          ports:
            - containerPort: 8081
