backend/user-data-service/k8s/user-data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-data
  labels:
    app: user-data
spec:
  selector:
    app: user-data
  ports:
    - port: 8080
      targetPort: 8080
